@@ -174,6 +174,11 @@ a.error:hover {
 	{ 
 	  font-size: 10px; 
 	}
+
+.topNavbar {
+    margin-bottom: 10px;
+}
+
 .nav                            /* used in navigation bars */
 	{ 
 	  font-size: 12px; 
