@@ -1,3 +1,14 @@
+2005-07-22 Jens Tkotz <jens@peino.de> 1.5.1-cvs-b64
+
+	* Change: translations in ecard_form
+
+	* Change: topNavBar in view_photo is now a <div>, not a <table>
+
+	* Change: simplification of checks for mircothumbs in view_photo
+
+	* Fix: Borders around bottom Navigation when Mircothumbs off.
+	Found by (Flori)Dave
+
 2005-07-20 Jens Tkotz <jens@peino.de> 1.5.1-cvs-b63
 
 	* FIX: When an admin changed something in his/her userdata, he/she lost the admin status.
